balsa_SOUNDS = startup.wav newmail.wav
balsa_SOUNDLISTS = balsa.soundlist email.soundlist

EXTRA_DIST = $(balsa_SOUNDS) $(balsa_SOUNDLISTS)

balsasoundsdir = $(DESTDIR)$(gnomedatadir)/sounds/balsa
balsasounds_DATA = $(balsa_SOUNDS)

soundlistdir = $(DESTDIR)$(gnomeconfdir)/sound/events
soundlist_DATA = $(balsa_SOUNDLISTS)
