AC_INIT(images/balsa-logo.jpg)
dnl AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(balsa-website, 1.0.0)
dnl AC_ISC_POSIX
dnl AC_ARG_PROGRAM

dnl ######################################################################################
dnl What is our HTML root?
dnl ######################################################################################

AC_ARG_WITH(root, [  --with-root=ROOT        Create the website data with specified root (prefix for links)],[
	with_root=$withval
],[
	with_root=no
])

AC_MSG_CHECKING([the HTML root])
if test x"$with_root" != xno ; then
	test x"$with_root" != x -a x"$with_root" != xyes && website_root=$with_root
else
	website_root="http://www.balsa.net"
fi

AC_MSG_RESULT([$website_root])
AC_SUBST(website_root)

dnl ######################################################################################
dnl Create files.
dnl ######################################################################################

AC_OUTPUT([
Makefile
])

echo ""
echo "========= Final configuration ==================="
echo "    Installing into prefix: $prefix"
echo "         Website HTML root: $website_root"
