figs = \
       figures/address-book-ldap.png \
       figures/address-book-modify.png \
       figures/address-book.png \
       figures/address-book-start.png \
       figures/address-book-vcard.png \
       figures/balsa_logo.png \
       figures/druid-start.png \
       figures/example-alias.png \
       figures/main-window.png \
       figures/main-window-toolbar.png \
       figures/newmsg-window-attachments.png \
       figures/newmsg-window.png \
       figures/newmsg-window-toolbar.png \
       figures/preferences-window.png \
       figures/spell-check.png
docname = balsa-manual
lang = C
omffile = balsa-manual-C.omf
entities = fdl-appendix.xml
include $(top_srcdir)/help/xmldocs.make
dist-hook: app-dist-hook

