extra_appicons_imgs = [
  'balsa-crypt-check.png',
  'balsa-encrypted.png',
  'balsa-encrypt.png',
  'balsa-mark-all.png',
  'balsa-marked-new.png',
  'balsa-next-flagged.png',
  'balsa-next-part.png',
  'balsa-next.png',
  'balsa-next-unread.png',
  'balsa-postpone.png',
  'balsa-preview.png',
  'balsa-previous-part.png',
  'balsa-previous.png',
  'balsa-reply-all.png',
  'balsa-send-queued.png',
  'balsa-signature-bad.png',
  'balsa-signature-good.png',
  'balsa-signature-notrust.png',
  'balsa-signature-unknown.png',
  'balsa-sign.png',
  'balsa-trash-empty.png',
  'mail-queue.png',
  'stock_mail-receive.png',
  'stock_contact.png',
  'stock_mail.png',
  'stock_book_red.png',
  'stock_book_yellow.png',
  'stock_book_green.png',
  'stock_book_blue.png',
  'stock_book_open.png',
  'stock_view-fields.png'
  ]

extra_appiconsdir = join_paths(get_option('datadir'), 'balsa', 'hicolor', '24x24', 'apps')
foreach img : extra_appicons_imgs
  install_data(img, install_dir : extra_appiconsdir)
endforeach
